# innoket

./: .gitignore  COPYING  INSTALL  Makefile.am  README.md  configure.ac  innoket.pro  techstack.md  techstack.yml
contrib/: dash-qt.pro  ui_aboutdialog.h  ui_helpmessagedialog.h  ui_intro.h  ui_optionsdialog.h  ui_overviewpage.h  ui_receivecoinsdialog.h  ui_rpcconsole.h  ui_sendcoinsentry.h  ui_signverifymessagedialog.h
contrib/chc_seeder/: dns_server.py  mn_rand_ips.py
contrib/macdeploy/: fancy.plist  macdeployqtplus
contrib/testgen/: gen_base58_test_vectors.py
doc/: Doxyfile  README.md  README_windows.txt  build-msw.md  build-osx.md  build-unix.md  guide-startmany.md  masternode_conf.md  release-notes.md  release-process.md  tor.md
qa/rpc-tests/: util.py  wallet.sh  walletbackup.sh
share/: setup.nsi.in
share/qt/: Info.plist.in
src/: COPYING  INSTALL  Makefile.am  Makefile.include  README.md  activemasternode.cpp  base58.h  bignum.h  chainparams.cpp  chainparams.h  checkpoints.cpp  clientversion.h  coins.h  common.h  configure.ac  core.h  darksend.cpp  darksend.h  hash.h  init.cpp  innoket-cli-res.rc  innoket-cli.cpp  innoketd-res.rc  innoketd.cpp  instantx.h  keepass.cpp  keepass.h  main.cpp  main.h  masternodeconfig.cpp  miner.cpp  net.cpp  netbase.h  noui.cpp  rpcblockchain.cpp  rpcclient.cpp  rpcclient.h  rpcdarksend.cpp  rpcdump.cpp  rpcmining.cpp  (+16 more)
src/compat/: byteswap.h  endian.h  glibc_compat.cpp
src/contrib/: dash-qt.pro
src/contrib/testgen/: gen_base58_test_vectors.py
src/doc/: build-unix.md
src/qa/pull-tester/: build-tests.sh.in
src/qa/rpc-tests/: conflictedbalance.sh  txnmall.sh
src/qt/: Makefile.am  addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  bitcoinaddressvalidator.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  clientmodel.h  coincontroldialog.cpp  darksendconfig.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  innoket.cpp  innoket.qrc  innoketstrings.cpp  intro.cpp  loggerpage.h  notificator.h  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  paymentserver.cpp  receiverequestdialog.cpp  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  sendcoinsentry.cpp  signverifymessagedialog.cpp  splashscreen.cpp  transactiondesc.cpp  transactionrecord.cpp  utilitydialog.cpp  walletmodel.cpp  walletview.h
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  helpmessagedialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: dash_bar.ts  dash_bg.ts  dash_ca.ts  dash_cmn.ts  dash_cs.ts  dash_da.ts  dash_de.ts  dash_el.ts  dash_en.ts  dash_eo.ts  dash_es.ts  dash_fi.ts  dash_fr.ts  dash_hu_HU.ts  dash_it.ts  dash_lv_LV.ts  dash_nb.ts  dash_nl.ts  dash_pl.ts  dash_pt.ts  dash_pt_BR.ts  dash_ru.ts  dash_sk.ts  dash_sv.ts  dash_tr.ts  dash_vi.ts  dash_zh_CN.ts  dash_zh_HK.ts
src/qt/res/: innoket-qt-res.rc
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: Makefile.am  getarg_tests.cpp  test_innoket.cpp
